# printz_nat_comm_2023

./: .gitignore  LICENSE  README.md
01_decon_oasis/: detect_with_oasis_and_save.py  names.txt  pyproject.toml  pyproject_backup.toml
02_fit_decon_trace/: Readme.md  array_fit.py  just_fit_funcs.py  names_for_fit.txt
03_manual_skipped_fitting/: use_for_splitting.py
05_prepare_data_for_inference_mcmc/: load_MADs.py  pyproject.toml
06_inference_mcmc/: README.md  array_job_class.job  concat_dfs.py  environment.yml  inference_class.py  job_notebook_new.py  job_notebook_new_3_cells.py
07_code_for_figure_example_trace/: README.md  make_figure.py
07_code_for_figure_example_trace/plots/: trace_figure_v2.eps  trace_figure_v3_pretty.eps
08_GLM_mcmc/: README.md  environment.yml
Event_detection/01_decon_oasis/: Readme.md  combine_decons.py  intall_oasis.txt  my_funcs_detect_and_save.py  notes.txt  requirements.txt
Event_detection/03_manual_skipped_fitting/: Readme.md  check_big_clusts.py  notes.txt
Event_detection/04_merge_manual_and_automatic_fitting/: README.md  test_csvs.py
Event_detection/05_prepare_data_for_inference_mcmc/: README.md  load_PC_cells.py  split_into_pairs.py
Event_detection/06_inference_mcmc/: environment_portable.yml
Event_detection/08_GLM_mcmc/: make_transformations.py  predictorTable.txt  run_on_transformed.py
GLM/: ConnCode_GLM.m  ReadMe.md
Maps/: ConnCode_maps.m  ReadMe.md
Matlab functions - add to Matlab path/: GLM_logit_constantCV.m  popup.m  popupmore.m  pvpmod.m  setgcf.m
Other data/: ConnCode.m  ReadMe.md
